...
                .border(2.dp, MaterialTheme.colorScheme.primary, CircleShape),)
            Spacer(modifier = Modifier.width(12.dp))
            Column {

                Row {
                    PerfilStat(artista.obras.size, "Posts",{})
                    PerfilStat(artista.seguidores, "Seguidores",  {seguidoresPressed()}, tag = "Seguidores")
                    PerfilStat(artista.siguiendo, "Seguidos", {seguidosPressed()})
                }
                Spacer(modifier = Modifier.height(8.dp))
                Text(
                    text = artista.usuario,
                    style = MaterialTheme.typography.titleLarge,
                    fontWeight = FontWeight.Bold,
                    modifier = Modifier.testTag("TextNombre")
                )
                Text(
                    text = artista.profesion,
                    style = MaterialTheme.typography.bodyMedium,
                    color = MaterialTheme.colorScheme.onSurfaceVariant,
                    modifier = Modifier.testTag("TextProfesion")
                )
                Spacer(modifier = Modifier.height(8.dp))
                Text(
                    text = artista.biografia,
                    style = MaterialTheme.typography.bodySmall,
                    color = MaterialTheme.colorScheme.onSurfaceVariant,
                    modifier = Modifier.fillMaxWidth().testTag("TextBiografia")
                )
            }

        }
        Tags(artista, guardadoPressed )
    }
...
                 ObraPressed: (String) -> Unit = {},
                 EditarPressed: () -> Unit = {},
                 LogOutPressed:()-> Unit = {},
                 EditarRPressed: (String) -> Unit ={},
                 SeguidoresPresed: (String)-> Unit ={},
                 SeguidosPresed: (String)-> Unit = {},
                 modifier: Modifier = Modifier.testTag("PerfilScreen")
) {

    val state by viewmodel.uiState.collectAsState()
    LaunchedEffect(Unit) {
        viewmodel.getUsuario(id)
      //  Log.d("User","Se encontro user")
...
                    }else{
                        ProfileHeader(state.usuario, { guardadoPressed() },{SeguidoresPresed(state.usuario.id)},
                            {SeguidosPresed(state.usuario.id)})
                        Spacer(modifier= Modifier.height(8.dp))
                        Button(
                            onClick = {viewmodel.followOrUnfollowUser(state.usuario.id)},
                            modifier = Modifier.padding(horizontal = 20.dp).height(30.dp).testTag("BotonSeguir"),
                            contentPadding = PaddingValues(vertical = 2.dp, horizontal = 7.dp)
                        ) {
                            Text(
                                text = if (!state.usuario.seSiguen){"Seguir"}else{"Dejar de seguir"}
                            )
                        }
...
