...
        fun createPRoute(perfilId: String): String{
            return "perfil/$perfilId"
        }
    }
    object Buscar : Rutas("buscar")
    object Guardadas : Rutas("guardadas")
    object Trending : Rutas("trending")
    object Barra: Rutas("barra")
    object Principal: Rutas("principal")
    object EditarPerfil: Rutas("editarperfil/{id}"){
        fun createEditRoute(id:String):String{
            return "editarperfil/${id}"
        }
...
        }
        //Navegacion Pagina principal
        composable(Rutas.Principal.ruta) {
            val viewmodel: PrincipalViewModel = hiltViewModel()
            val state by viewmodel.uiState.collectAsState()

            PrincipalScreen({obraId->navControler.navigate(Rutas.Detalle.createRoute(obraId ))}, {perfilId->navControler.navigate(Rutas.Perfil.createPRoute(perfilId))},viewmodel)
        }
        //Navegacion Inicio de Sesion
        composable(Rutas.Login.ruta) {
            val viewmodel: InicioSesionViewModel= hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (state.navegar){
...
            PublicacionesGuardadasScreen({ obraId->navControler.navigate(Rutas.Detalle.createRoute(obraId )) },viewmodel)
        }
        //Navegacion Pantalla Trending
        composable(Rutas.Trending.ruta) {
            val viewmodel: TrendingViewModel=hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            TrendingScreen( viewmodel,{ obraId->navControler.navigate(Rutas.Detalle.createRoute(obraId )) }, {perfilId->navControler.navigate(Rutas.Perfil.createPRoute(perfilId))})
        }
        //Navegacion Pantalla Editar Perfil
        composable(Rutas.EditarPerfil.ruta, arguments = listOf(navArgument("id"){type = NavType.StringType})) {
            val UsuarioId=it.arguments?.getString("id") ?:""
            val viewmodel: EditarPerfilViewModel = hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
...
