...

        MensajeBienvenida(stringResource(R.string.trazzo))
        Spacer(modifier = Modifier.height(23.dp))
        AddButton(
            stringResource(R.string.iniciar_sesion),
            onClick = {loginButtonPressed()},
            modifier = Modifier.width(200.dp).testTag("Login_button")
        )
        AddButton(
            stringResource(R.string.registrarse),
            onClick = {registerButtonPressed()},
            modifier = Modifier.width(200.dp).testTag("Register_button"),
        )
...
